Rework resources to be a single thing to support reading and writing